<resources>
    <string name="app_name">E-Complaint</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_string">Login</string>
    <string name="register">Register</string>
    <string name="e_complaint">E-Complaint</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password ??</string>
    <string name="or">OR</string>
    <string name="upload">Upload</string>
    <string name="description_or_link">Description or Link</string>
    <string name="full_name">Full Name</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="submit">Submit</string>
    <string name="newPassword">New Password</string>
    <string name="retypePassword">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="doootssss">……</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="continue_with_google">Login with Google</string>
    <string name="continue_with_facebook">Login with facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="facebook_app_id">1502538519855491</string>
    <string name="fb_login_protocol_scheme">fb1502538519855491</string>


</resources>
