<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.attaurrahman.e_complaint.fragment.LoginTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color_complaint"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_ecomplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_complaint"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/arrow" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/widget_margin"
        android:layout_marginRight="@dimen/widget_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_string"
                android:textAllCaps="true" />

            <View
                android:id="@+id/view_register"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorOrange" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="true" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <EditText
                    android:id="@+id/et_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/edit_text_left_right_margin"
                    android:layout_marginStart="@dimen/edit_text_left_right_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/dotted"
                    android:focusable="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/text_padding_left"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/et_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="@dimen/edit_text_left_right_margin"
                    android:layout_marginStart="@dimen/edit_text_left_right_margin"
                    android:layout_marginTop="@dimen/edit_text_top_margin"
                    android:background="@drawable/dotted"
                    android:focusable="false"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:paddingStart="@dimen/text_padding_left"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tv_forgetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/tv_margin_right_forget_password"
                    android:layout_marginTop="3dp"
                    android:gravity="end"
                    android:text="@string/forget_password" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_height"
                    android:layout_marginEnd="@dimen/widget_margin"
                    android:layout_marginStart="@dimen/widget_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/round_corners_button_orange_view"
                    android:text="@string/login_string"
                    android:textColor="@color/white_color_forget_password"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/tv_margin_top_or"
                    android:gravity="center_horizontal"
                    android:text="@string/or"
                    android:textStyle="bold" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/btn_login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="100sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="30sp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_facebook"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/widget_height"
                        android:layout_marginEnd="@dimen/widget_margin"
                        android:layout_marginStart="@dimen/widget_margin"
                        android:layout_marginTop="5dp"
                        android:background="@mipmap/facebook_button"
                        android:drawableLeft="@mipmap/facebook_logo"
                        android:paddingStart="@dimen/text_padding_left"
                        android:text="@string/continue_with_facebook"
                        android:textAllCaps="false"
                        android:textColor="#fff"
                        android:textStyle="bold" />

                </FrameLayout>


                <Button
                    android:id="@+id/btn_google"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_height"
                    android:layout_marginEnd="@dimen/widget_margin"
                    android:layout_marginStart="@dimen/widget_margin"
                    android:layout_marginTop="@dimen/edit_text_top_margin"
                    android:background="@mipmap/google_botton"
                    android:drawableLeft="@mipmap/google"
                    android:paddingStart="@dimen/text_padding_left"
                    android:text="@string/continue_with_google"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textStyle="bold" />


            </LinearLayout>
        </TableLayout>
    </ScrollView>

</LinearLayout>
