<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.attaurrahman.e_complaint.fragment.ChangePasswordFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color_change_password"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_ecomplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_complaint"
            android:textAlignment="center"
            android:textColor="@color/black_color_change_password"
            android:textStyle="bold" />

        <View
            android:layout_width="@dimen/h_v_width_change_password"
            android:layout_height="@dimen/h_v_height_change_password"
            android:layout_gravity="center"
            android:background="@color/arrow" />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_ll_change_password">

                <EditText
                    android:id="@+id/et_newPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_height"
                    android:layout_marginEnd="@dimen/edit_text_left_right_margin"
                    android:layout_marginStart="@dimen/edit_text_left_right_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/et_dots"
                    android:hint="@string/newPassword"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/text_padding_left"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/et_forgetPassword_retypePassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_height"
                    android:layout_marginEnd="@dimen/edit_text_left_right_margin"
                    android:layout_marginStart="@dimen/edit_text_left_right_margin"
                    android:layout_marginTop="@dimen/edit_text_top_margin"
                    android:background="@drawable/et_dots"
                    android:hint="@string/retypePassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/text_padding_left"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />

                <Button
                    android:id="@+id/btn_change_password_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_height"
                    android:layout_marginEnd="@dimen/widget_margin"
                    android:layout_marginStart="@dimen/widget_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/round_corners_button_orange_view"
                    android:text="@string/submit"
                    android:textColor="#fff"
                    android:textStyle="bold" />


            </LinearLayout>
        </TableLayout>
    </ScrollView>

</LinearLayout>
