<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.attaurrahman.e_complaint.fragment.ForgetPasswordFargment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@mipmap/image"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_ecomplaint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_complaint"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <View
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:background="@color/arrow" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ll_verify_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">

                <EditText
                    android:id="@+id/et_email_verify"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_height"
                    android:layout_marginEnd="@dimen/edit_text_left_right_margin"
                    android:layout_marginStart="@dimen/edit_text_left_right_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/et_dots"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/text_padding_left"
                    android:singleLine="true"
                    tools:ignore="RtlSymmetry" />


                <Button
                    android:id="@+id/btn_forgetPassword_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_height"
                    android:layout_marginEnd="@dimen/widget_margin"
                    android:layout_marginStart="@dimen/widget_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/round_corners_button_orange_view"
                    android:text="@string/submit"
                    android:textColor="@color/white_color_forget_password"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_verify_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_left_ll_forget_password"
                    android:layout_marginRight="@dimen/margin_right_ll_forget_password"
                    android:layout_marginTop="@dimen/margin_top_ll_forget_password"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_code_num1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/et_code_margin_right"
                        android:layout_weight="1"
                        android:background="@drawable/squreline"
                        android:ems="10"
                        android:inputType="phone"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:textColor="@color/verify_code_color_forget_password" />

                    <EditText
                        android:id="@+id/et_code_num2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/et_code_margin_right"
                        android:layout_weight="1"
                        android:background="@drawable/squreline"
                        android:ems="10"
                        android:inputType="phone"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:textColor="@color/verify_code_color_forget_password" />

                    <EditText
                        android:id="@+id/et_code_num3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/et_code_margin_right"
                        android:layout_weight="1"
                        android:background="@drawable/squreline"
                        android:ems="10"
                        android:inputType="phone"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:textColor="@color/verify_code_color_forget_password" />

                    <EditText
                        android:id="@+id/et_code_num4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/et_code_margin_right"
                        android:layout_weight="1"
                        android:background="@drawable/squreline"
                        android:ems="10"
                        android:inputType="phone"
                        android:textAlignment="center"
                        android:textColor="@color/verify_code_color_forget_password" />

                    <EditText
                        android:id="@+id/et_code_num5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/et_code_margin_right"
                        android:layout_weight="1"
                        android:background="@drawable/squreline"
                        android:ems="10"
                        android:inputType="phone"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:textColor="@color/verify_code_color_forget_password" />

                    <EditText
                        android:id="@+id/et_code_num6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/squreline"
                        android:ems="10"
                        android:inputType="phone"
                        android:maxLength="1"
                        android:textAlignment="center"
                        android:textColor="@color/verify_code_color_forget_password" />

                </LinearLayout>

                <Button
                    android:id="@+id/btn_forget_verify_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_height"
                    android:layout_marginEnd="@dimen/widget_margin"
                    android:layout_marginStart="@dimen/widget_margin"
                    android:layout_marginTop="@dimen/margin_top"
                    android:background="@drawable/round_corners_button_orange_view"
                    android:text="@string/verify"
                    android:textAllCaps="false"
                    android:textColor="@color/white_color_forget_password"
                    android:textStyle="bold" />


            </LinearLayout>
        </TableLayout>
    </ScrollView>


</LinearLayout>
